[package]
edition = "2021"
name = "iter-identify_first_last"
version = "0.1.0"
rust-version = "1.59"
authors = ["warlock <internalmike@gmail.com>"]
description = "A helper iterator, flagging first and last elements."
readme = "README.md"
documentation = "https://docs.rs/iter-identify_first_last/"
keywords = ["iter", "iterator", "first", "last", "is_last"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/iter-identify_first_last"

[features]
default = ["nightly"]
## Enabled by default. Disable to make the library compatible with stable and beta Rust channels.
nightly = []

[dev-dependencies]
arrayvec = { version = "0.7.2", default-features = false }

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
document-features = "0.2.7"
